fixed comment wrapping

--- a/src/styles.css
+++ b/src/styles.css
@@ -780,6 +780,7 @@ pre {
 .comment {
   margin-top: 5px;
   margin-left: 8px;
+  margin-right: 5px;
 }
 
 .comment pre {
@@ -787,6 +788,7 @@ pre {
   margin-top: 1px;
   margin-bottom: 0;
   padding: 0;
+  white-space: pre-wrap;
 }
 
 .song-view-main button {
